RESOLVED FIXED166865
CachedScript cloning does not clone encodedSize
https://bugs.webkit.org/show_bug.cgi?id=166865
Summary CachedScript cloning does not clone encodedSize
youenn fablet
Reported 2017-01-09 15:04:49 PST
CachedScript cloning does not clone encodedSize. See radar 29491188.
Attachments
Patch (8.49 KB, patch)
2017-01-09 15:27 PST, youenn fablet
no flags
Patch (8.35 KB, patch)
2017-01-09 15:46 PST, youenn fablet
no flags
youenn fablet
Comment 1 2017-01-09 15:27:53 PST
youenn fablet
Comment 2 2017-01-09 15:46:34 PST
youenn fablet
Comment 3 2017-01-09 15:48:32 PST
(In reply to comment #2) > Created attachment 298404 [details] > Patch Removing unneeded internals API calls as spotted by Joe
WebKit Commit Bot
Comment 4 2017-01-10 07:08:49 PST
Comment on attachment 298404 [details] Patch Clearing flags on attachment: 298404 Committed r210546: <http://trac.webkit.org/changeset/210546>
WebKit Commit Bot
Comment 5 2017-01-10 07:08:54 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.