CachedScript cloning does not clone encodedSize https://bugs.webkit.org/show_bug.cgi?id=166865

Patch by Youenn Fablet <youenn@apple.com> on 2017-01-10
Reviewed by Darin Adler.

Source/WebCore:

Covered by updated test.

* loader/cache/CachedResource.cpp:
(WebCore::CachedResource::setBodyDataFrom): set encoded size based on being cloned resource.
* loader/cache/CachedScript.cpp:
(WebCore::CachedScript::script):
(WebCore::CachedScript::setBodyDataFrom): Making use of CachedResource::setBodyDataFrom for complete cloning.

LayoutTests:

* http/tests/security/cross-origin-cached-scripts-expected.txt:
* http/tests/security/cross-origin-cached-scripts.html:
* http/tests/security/resources/notify-loaded.js:

Canonical link: https://commits.webkit.org/183991@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@210546 268f45cc-cd09-0410-ab3c-d52691b4dbfc