Source/WebCore/loader/cache/CachedScript.cpp
@@ -125,7 +125,8 @@ void CachedScript::setBodyDataFrom(const CachedResource& resource)
     ASSERT(resource.type() == type());
     auto& script = static_cast<const CachedScript&>(resource);
 
-    m_data = script.m_data;
+    CachedResource::setBodyDataFrom(resource);
+
     m_script = script.m_script;
     m_scriptHash = script.m_scriptHash;
     m_decodingState = script.m_decodingState;
