LayoutTests/http/tests/security/resources/notify-loaded.js
@@ -1,1 +1,1 @@
-document.body.innerHTML += "LOADED";
+document.body.innerHTML += "LOADED with UTF-8 content ¢";
